--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
@@ -209,9 +209,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\SensorMigrations\201605031805364_InitialCreate.cs" />
-    <Compile Include="Migrations\SensorMigrations\201605031805364_InitialCreate.Designer.cs">
-      <DependentUpon>201605031805364_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\SensorMigrations\201605052111236_InitialCreate.cs" />
+    <Compile Include="Migrations\SensorMigrations\201605052111236_InitialCreate.Designer.cs">
+      <DependentUpon>201605052111236_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\SensorMigrations\201605052113594_updated to current.cs" />
+    <Compile Include="Migrations\SensorMigrations\201605052113594_updated to current.Designer.cs">
+      <DependentUpon>201605052113594_updated to current.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\SensorMigrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -302,8 +306,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\SensorMigrations\201605031805364_InitialCreate.resx">
-      <DependentUpon>201605031805364_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\SensorMigrations\201605052111236_InitialCreate.resx">
+      <DependentUpon>201605052111236_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\SensorMigrations\201605052113594_updated to current.resx">
+      <DependentUpon>201605052113594_updated to current.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
