--- a/COMP4900_SOCE_WebApp/SensorDataModel/SensorDataModel.csproj
+++ b/COMP4900_SOCE_WebApp/SensorDataModel/SensorDataModel.csproj
@@ -65,9 +65,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\gvs_north.cs" />
+    <Compile Include="Models\gvs_south.cs" />
+    <Compile Include="Models\hpws.cs" />
+    <Compile Include="Models\mh_north.cs" />
+    <Compile Include="Models\hpws_rp.cs" />
+    <Compile Include="Models\mh_south.cs" />
     <Compile Include="Models\Project.cs" />
-    <Compile Include="Models\Sensor.cs" />
     <Compile Include="Models\SensorContext.cs" />
+    <Compile Include="Models\SensorDateTime.cs" />
+    <Compile Include="Models\SensorProject.cs" />
+    <Compile Include="Models\th_ext.cs" />
+    <Compile Include="Models\th_int.cs" />
+    <Compile Include="Models\th_ps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
