--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
@@ -206,16 +206,29 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\AccountMigration\201605091730401_UserIdentity.cs" />
+    <Compile Include="Migrations\AccountMigration\201605091730401_UserIdentity.Designer.cs">
+      <DependentUpon>201605091730401_UserIdentity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\AccountMigration\201605091748533_edited user identity.cs" />
+    <Compile Include="Migrations\AccountMigration\201605091748533_edited user identity.Designer.cs">
+      <DependentUpon>201605091748533_edited user identity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\AccountMigration\Configuration.cs" />
     <Compile Include="Migrations\SensorMigrations\201605060010048_InitialCreate.cs" />
     <Compile Include="Migrations\SensorMigrations\201605060010048_InitialCreate.Designer.cs">
       <DependentUpon>201605060010048_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\SensorMigrations\201605091746407_Added models for user Custom group names.cs" />
+    <Compile Include="Migrations\SensorMigrations\201605091746407_Added models for user Custom group names.Designer.cs">
+      <DependentUpon>201605091746407_Added models for user Custom group names.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\SensorMigrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -283,6 +296,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Projects\Create.cshtml" />
+    <Content Include="Views\Projects\Delete.cshtml" />
+    <Content Include="Views\Projects\Details.cshtml" />
+    <Content Include="Views\Projects\Edit.cshtml" />
+    <Content Include="Views\Projects\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -302,8 +320,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Migrations\AccountMigration\201605091730401_UserIdentity.resx">
+      <DependentUpon>201605091730401_UserIdentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\AccountMigration\201605091748533_edited user identity.resx">
+      <DependentUpon>201605091748533_edited user identity.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\SensorMigrations\201605060010048_InitialCreate.resx">
       <DependentUpon>201605060010048_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\SensorMigrations\201605091746407_Added models for user Custom group names.resx">
+      <DependentUpon>201605091746407_Added models for user Custom group names.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
