--- a/COMP4900_SOCE_WebApp/SensorDataModel/SensorDataModel.csproj
+++ b/COMP4900_SOCE_WebApp/SensorDataModel/SensorDataModel.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\IdentityExtensions.cs" />
     <Compile Include="Identity\IdentityModels.cs" />
     <Compile Include="Models\CustomGroup.cs" />
     <Compile Include="Models\gvs_north.cs" />
@@ -80,7 +81,7 @@
     <Compile Include="Models\th_ext.cs" />
     <Compile Include="Models\th_int.cs" />
     <Compile Include="Models\th_ps.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
