--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
@@ -241,6 +241,10 @@
     <Compile Include="Migrations\SensorMigrations\201605182136005_InitialCreate.Designer.cs">
       <DependentUpon>201605182136005_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\SensorMigrations\201605182306578_Added required for everything except sensor value, added savedreport, final db.cs" />
+    <Compile Include="Migrations\SensorMigrations\201605182306578_Added required for everything except sensor value, added savedreport, final db.Designer.cs">
+      <DependentUpon>201605182306578_Added required for everything except sensor value, added savedreport, final db.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\SensorMigrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -376,6 +380,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\SensorMigrations\201605182136005_InitialCreate.resx">
       <DependentUpon>201605182136005_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\SensorMigrations\201605182306578_Added required for everything except sensor value, added savedreport, final db.resx">
+      <DependentUpon>201605182306578_Added required for everything except sensor value, added savedreport, final db.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
