--- a/COMP4900_SOCE_WebApp/SensorDataModel/SensorDataModel.csproj
+++ b/COMP4900_SOCE_WebApp/SensorDataModel/SensorDataModel.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Models\CustomGroup.cs" />
     <Compile Include="Models\groupProject.cs" />
     <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\SavedReport.cs" />
     <Compile Include="Models\SensorContext.cs" />
     <Compile Include="Models\SensorProject.cs" />
     <Compile Include="Models\Sensor.cs" />
