--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
@@ -361,6 +361,7 @@
     <Content Include="Views\SensorProjects\Index.cshtml" />
     <Content Include="Views\Projects\AssignSensorsToProjects.cshtml" />
     <Content Include="Views\Projects\RemoveSensorsFromProjects.cshtml" />
+    <Content Include="Views\Reports\Reports.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
