--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\ReportsController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
+    <Compile Include="Controllers\SavedReportsController.cs" />
     <Compile Include="Controllers\SensorProjectsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
@@ -362,6 +363,11 @@
     <Content Include="Views\Projects\AssignSensorsToProjects.cshtml" />
     <Content Include="Views\Projects\RemoveSensorsFromProjects.cshtml" />
     <Content Include="Views\Reports\Reports.cshtml" />
+    <Content Include="Views\SavedReports\Create.cshtml" />
+    <Content Include="Views\SavedReports\Delete.cshtml" />
+    <Content Include="Views\SavedReports\Details.cshtml" />
+    <Content Include="Views\SavedReports\Edit.cshtml" />
+    <Content Include="Views\SavedReports\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
