adding sensor to project still work in progress DOESNT WORK ATM. added sejong's export code

--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
@@ -385,6 +385,7 @@
     <Content Include="Views\Security\Unauthorized.cshtml" />
     <Content Include="Views\Charts\Index.cshtml" />
     <Content Include="Views\Charts\DateTime.cshtml" />
+    <Content Include="Views\Projects\SearchSensors.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
