--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
@@ -386,6 +386,7 @@
     <Content Include="Views\Charts\Index.cshtml" />
     <Content Include="Views\Charts\DateTime.cshtml" />
     <Content Include="Views\Projects\SearchSensors.cshtml" />
+    <Content Include="Views\Reports\Download.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
