ASSIGN SENSOR (SINGLE + GROUP) ALL FINISHED

--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
@@ -387,6 +387,8 @@
     <Content Include="Views\Charts\DateTime.cshtml" />
     <Content Include="Views\Projects\SearchSensors.cshtml" />
     <Content Include="Views\Reports\Download.cshtml" />
+    <Content Include="Views\Projects\AssignGroup.cshtml" />
+    <Content Include="Views\Projects\RemoveGroup.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
