--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp.csproj
@@ -390,6 +390,7 @@
     <Content Include="Views\Projects\AssignGroup.cshtml" />
     <Content Include="Views\Projects\RemoveGroup.cshtml" />
     <Content Include="Views\Reports\SavedReports.cshtml" />
+    <Content Include="Views\Reports\Chart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
