Web.config edited online with Bitbucket - removed connection string info

--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Web.config
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Web.config
@@ -9,7 +9,7 @@
   </configSections>
 
   <connectionStrings>
-    <add name="MySQLConnection" connectionString="server=127.0.0.1;database=soceweb;UserId=root;password=thisismysql;" providerName="MySql.Data.MySqlClient" />
+    <add name="MySQLConnection" connectionString="server=127.0.0.1;database=;UserId=;password=;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 
   <entityFramework>
